@@ -30,6 +30,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #3035: Unused functions from tkinter are marked as pending peprecated.
+
 - Issue #12757: Fix the skipping of doctests when python is run with -OO so
   that it works in unittest's verbose mode as well as non-verbose mode.
 
